<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<androidx.appcompat.widget.Toolbar-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:elevation="4dp"-->
        <!--android:id="@+id/toolbar"-->
        <!--android:theme="@style/MyToolbarTheme"-->
        <!--android:background="@color/colorPrimary"/>-->


    <AutoCompleteTextView
        android:id="@+id/textspeak"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:hint="@string/enterTextHint"
        android:gravity="start">
    </AutoCompleteTextView>

    <Button
        android:id="@+id/btn_speak"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@color/colorbutton"
        android:textColor="@color/colorWhite"
        android:layout_below="@+id/textspeak"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/speak" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textspeak"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorbutton"
        android:text="@string/Clear"
        android:textColor="@color/colorWhite" />




</RelativeLayout>