<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Sentences Here "
        android:gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/editMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editMessage"
        android:layout_below="@+id/title"
        android:fontFamily="sans-serif-condensed"
        android:textSize="12sp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/colorWhite"
        />

    <Button
        android:id="@+id/changeCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changeCategory"
        android:textSize="12sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/editMessage"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/colorWhite"
        />



    <Button
        android:id="@+id/deleteM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteMessage"
        android:textStyle="bold"
        android:textSize="12sp"
        android:fontFamily="sans-serif-condensed"
        android:background="@color/colorPressed"
        android:layout_below="@+id/changeCategory"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/colorWhite"
        />


</RelativeLayout>