<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeCategory">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ctoolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/current_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="70dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/current_category1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_category"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/CurrentCategory" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/SelectCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/spinner"
        android:fontFamily="sans-serif-condensed"
        android:layout_below="@id/current_category"
        android:gravity="center"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/liner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/SelectCategory"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/spinnerbackground">

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:prompt="@string/spinner"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            />

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/liner"
        android:layout_marginTop="60dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newCategory1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/selected"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/NewCategory" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_changeCategory"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@+id/selected"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="25dp"
        android:background="@color/colorbutton"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/change"
        android:textColor="@color/colorWhite"
         />


</RelativeLayout>