<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoriesUpdate">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"/>


    <ImageView
        android:id="@+id/updatePhoto"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:background="@drawable/textback"
        android:padding="5dp"
        android:scaleType="fitXY"
        app:layout_collapseMode="pin"
        android:src="@drawable/ic_addphoto">

    </ImageView>

    <Button
        android:id="@+id/editimage"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_below="@id/updatePhoto"
        android:layout_marginStart="-40dp"
        android:layout_marginLeft="-40dp"
        android:layout_marginTop="-120dp"
        android:layout_toEndOf="@+id/updatePhoto"
        android:layout_toRightOf="@+id/updatePhoto"
        android:drawableTop="@drawable/editpic"
        android:gravity="top|center"
       android:background="@drawable/imgbackground" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="210dp"
        android:weightSum="10"
        >

        <TextView
            android:id="@+id/SelectCategory"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:layout_weight="3.5"
            android:layout_marginTop="-1dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/enterUpdateHint"
            android:background="@drawable/textviewback"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/updateName"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:layout_weight="6.5"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/textback"
            android:focusable="true"
            android:gravity="center"
            android:hint="@string/enterNameHint"
            android:textColor="#000" />



    </LinearLayout>





    <Button
        android:id="@+id/UpdateCategory"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@color/colorbutton"
        android:textColor="@color/colorWhite"
        android:layout_below="@+id/linear"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/Updatecategory" />



</RelativeLayout>