<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Help">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/htoolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="2dp"
        android:scrollbarThumbVertical="@drawable/scrollbar_color"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium"
        android:paddingBottom="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_xlong">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
    <TextView
        android:id="@+id/abouttext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/helptext"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/cardview_dark_background"
        android:justificationMode="inter_word"
        android:fontFamily="sans-serif-condensed"
        android:textSize="18sp"
       />

    <TextView
        android:id="@+id/guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/abouttext"
        android:fontFamily="sans-serif-condensed"
        android:textSize="18sp"
        android:textColor="@color/cardview_dark_background"
        />

    <TextView
        android:id="@+id/feeback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/feeback"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/guide"
        android:fontFamily="sans-serif-condensed"
        android:textSize="18sp"
        android:textColor="@color/cardview_dark_background"
        />

    <TextView
        android:id="@+id/linkofrecording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/link"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/feeback"
        android:fontFamily="sans-serif-condensed"
        android:textSize="18sp"
        android:textColor="@color/cardview_dark_background"
        />
     </LinearLayout>

    </ScrollView>


</LinearLayout>