<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewMessage">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        >
    </androidx.appcompat.widget.Toolbar>


    <androidx.cardview.widget.CardView
        android:id="@+id/meadia_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="open_mediaplayer"
        android:layout_marginTop="320dp"
        android:layout_centerHorizontal="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/file_name_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="7dp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="12sp"
                android:text="fileName.mp3"
                android:gravity="center"
                android:fontFamily="sans-serif-condensed"
                />

            <com.melnykov.fab.FloatingActionButton
                android:id="@+id/play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_play_arrow"
                app:fab_colorNormal="@color/colorbutton"
                app:fab_colorPressed="@color/colorPrimary"
                app:fab_shadow="false" />

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />



            <RelativeLayout
                android:id="@+id/relativePlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <TextView
                    android:id="@+id/current_progress_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="00:00" />

                <TextView
                    android:id="@+id/file_length_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="00:00"

                    />



            </RelativeLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <AutoCompleteTextView
        android:id="@+id/speaktext"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="60dp"
        android:hint="@string/enterTextHint"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="start">

    </AutoCompleteTextView>

        <EditText
            android:id="@+id/oder"
            android:text="@string/oder"
            android:layout_below="@+id/speaktext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#000"
            android:paddingLeft="130dp"
            android:inputType="number"
            />
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="76dp"
            android:layout_marginEnd="76dp"
            android:layout_below="@+id/speaktext"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"

            />


    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/btn_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_colorNormal="@color/colorbutton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="220dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/ic_mic_black_24dp"
        />

    <TextView
        android:id="@+id/recording_status_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_record"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginRight="150dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/record"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Addmessage"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@+id/meadia_player"
        android:layout_marginTop="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorbutton"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/AddNewMessage"
        android:textColor="@color/colorWhite" />



    <!--<com.melnykov.fab.FloatingActionButton-->
        <!--android:id="@+id/btn_save"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:fab_colorNormal="@color/colorbutton"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginEnd="20dp"-->
        <!--android:layout_marginRight="20dp"-->
        <!--android:src="@drawable/ic_save"-->
        <!--/>-->



    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:fontFamily="sans-serif-light"
        android:layout_alignBottom="@+id/recordprogressBar"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="80dp"
        android:visibility="gone"
        />

    <ProgressBar
        android:id="@+id/recordprogressBar"
        android:layout_width="80dp"
        android:layout_height="40dp"
        style="?android:attr/progressBarStyleHorizontal"
        android:progressDrawable="@drawable/record_progress_bar"
        android:background="@drawable/record_progress_bar_background"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:layout_marginTop="110dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:visibility="gone"
        />

    <!--<Button-->
        <!--android:id="@+id/btn_pause"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Pause"-->
        <!--android:textAllCaps="true"-->
        <!--android:fontFamily="sans-serif-condensed"-->
        <!--android:textStyle="bold"-->
        <!--android:textColor="#000000"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:layout_marginStart="10dp"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--/>-->




</RelativeLayout>